# graph-client-uniswap

./: Cargo.toml  README.md
.github/workflows/: rust_ci.yml
graphql/: query.graphql  schema.graphql
migrations/2022-04-09-133457_create_tokens/: up.sql
migrations/2022-05-11-074844_create_swaps/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
