[package]
name = "graphql_query_github_example"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
graphql_client = { version = "^0.10", features = ["reqwest-blocking"] }
serde = "^1.0"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
prettytable-rs = "^0.7"
clap = { version = "^3.0", features = ["derive"] }
log = "^0.4"
env_logger = "^0.5"
diesel = { version = "1.4.0", features = ["postgres", "chrono"] }
dotenv = "0.10"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.41"
chrono = "0.4"
retry = "1"